@@ -1,3 +1,8 @@
+* Mon Feb 11 2013 Dan Prince <dprince@redhat.com> - 1.3.2
+  -Add 'selinux_enabled' option for libvirt provider. If set this
+   option will set the SELinux context on /root/.ssh/authorized_keys
+   in the instance thus making it ssh'able when SELinux is enabled.
+
 * Thu Dec 13 2012 Dan Prince <dprince@redhat.com> - 1.3.1
   -SSH config fixes for libvirt and openstack providers. You can now
    ssh to localhost from the gateway node. (weird but constistent)
